
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ chdir (char*) ;
 scalar_t__ chroot (char*) ;
 int close (int ) ;
 int die (char*) ;
 int * go ;
 int read (int ,char*,int) ;
 int setuid (int ) ;

int child(void *arg)
{
 char c;

 close(go[1]);
 read(go[0], &c, 1);

 setuid(0);




 if (chdir("chroot") < 0)
  die("[-] chdir");
 if (chroot(".") < 0)
  die("[-] chroot");

 return 0;
}
