; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_38390.c_child.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_38390.c_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@go = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [7 x i8] c"chroot\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"[-] chdir\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"[-] chroot\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @child(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  %4 = load i32*, i32** @go, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 1
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @close(i32 %6)
  %8 = load i32*, i32** @go, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @read(i32 %10, i8* %3, i32 1)
  %12 = call i32 @setuid(i32 0)
  %13 = call i64 @chdir(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = call i32 @die(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %1
  %18 = call i64 @chroot(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = call i32 @die(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %17
  ret i32 0
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @setuid(i32) #1

declare dso_local i64 @chdir(i8*) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i64 @chroot(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
